--- a/build.gradle
+++ b/build.gradle
@@ -8,33 +8,18 @@ repositories {
 plugins {
     id 'java'
     id 'war'
-    id 'org.springframework.boot' version '2.5.3'
+    id 'org.springframework.boot' version '2.6.2'
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-
-    // Spring Boot Starter
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.6.2'
-
-    // Spring Boot Web
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.6.2'
-
-    // Spring Boot Validation
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.6.2'
-
-    // Spring Boot Test
-    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.6.2'
-
-    // Spring Boot Devtools
-    implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.6.2'
-
-    // Spring Boot MongoDB
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb', version: '2.6.2'
-
-    // Spring Boot Security
-    //implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.5.3'
 }
 
 test {
