--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-mongodb+srv://admin:<KjpOqxd1SAadIJQB>@onlinemarketplaceboard.ertqw.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
