--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
+plugins {
+    id 'java'
+    id 'war'
+    id 'org.springframework.boot' version '2.6.2'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+}
+
 group 'org.geroimzx'
 version '0.1-beta'
 
 repositories {
     mavenCentral()
-}
-
-plugins {
-    id 'java'
-    id 'war'
-    id 'org.springframework.boot' version '2.6.2'
 }
 
 dependencies {
@@ -24,4 +25,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+bootRun {
+    if (project.hasProperty('args')) {
+        args project.args.split(',')
+    }
 }
