--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,13 @@ test {
     useJUnitPlatform()
 }
 
+gradle.taskGraph.whenReady {
+    taskGraph ->
+        if (taskGraph.hasTask(stage)) {
+            test.enabled = false
+        }
+}
+
 task stage(dependsOn: ['build', 'clean'])
 build.mustRunAfter clean
+
