--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,13 @@ plugins {
     id 'org.springframework.boot' version '2.6.2'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
+apply plugin: 'java'
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.geroimzx.market.OnlineMarketplaceBoardApplication'
+    }
+}
 
 group 'org.geroimzx'
 version '0.1-beta'
